--- a/tvm-calc-test.html
+++ b/tvm-calc-test.html
@@ -160,7 +160,7 @@
                     <input id="FV" type="number" placeholder="0"><br>
 
                     <label>&nbsp;&nbsp;&nbsp;i </label>
-                    <input id="int" type="number" placeholder=".00"><br>
+                    <input id="int" type="number" placeholder="00"><br>
 
                     <label>&nbsp;&nbsp;n </label>
                     <input id="yrs" type="number" placeholder="0"><br>
