--- a/tvm1/help/help1-3.html
+++ b/tvm1/help/help1-3.html
@@ -59,7 +59,7 @@
                                         <div><img class="math" src="../images/add-numbers.svg"></div>
                                     </p>
                                     <p>Exponents: Raise the number in the parentheses to the exponent. Leave enough significant digits so that you don’t commit a rounding error.
-                                        <div><img class="math" src="../images/exponent-step.svg"></div>
+                                        <!-- <div><img class="math" src="../images/exponent-step.svg"></div> -->
                                     </p>
                                     <p>Multiple and Divide: Divide both sides by the same number to isolate PV. Remember to cancel out the fraction
                                         <div><img class="math" src="../images/multiply-and-divide.svg" style='height: 55px;'></div>
