--- a/tvm1/help/help1-5.html
+++ b/tvm1/help/help1-5.html
@@ -37,28 +37,28 @@
                             FV = 1500 &nbsp;&nbsp;&nbsp;&nbsp;
                             i = 9% or 0.09 &nbsp;&nbsp;&nbsp;&nbsp;
                             n = ?</p>
-                        <div><img class="math" src="../images/exponent-step.svg"></div>
+                        <!-- <div><img class="math" src="../images/exponent-step.svg"></div> -->
                         <p>Next, plug the numbers you've identified into the equation.</p>
                         <div class="math">FV = PV(1 + i)<sup>n</sup> <b>&nbsp;&xrarr;&nbsp;</b> 1500 = 1000(1 + 0.09)<sup>n</sup></div>
                         </p>
-                        <div><img class="math" src="../images/exponent-step.svg"></div>
+                        <!-- <div><img class="math" src="../images/exponent-step.svg"></div> -->
                         <p>Now solve for the unknown variable, in this case n. <span class="note">Remember PEMDAS.</span> </p>
                         <ol>
                             <li><b>P</b>: Add the numbers in the parentheses.<br>
                                 <div class="math">1500 = 1000(1.09)<sup>n</sup></div>
-                                <div><img class="math" src="../images/exponent-step.svg"></div>
+                                <!-- <div><img class="math" src="../images/exponent-step.svg"></div> -->
                             </li>
                             <li><b>MD</b>: Isolate the parentheses by dividing each side by 1000. Then convert the fraction on the left side of the equal sign to a decimal.
                                 <div class="bottom-space">
                                     <img src="./images/tvm1_basic_n_example_help2.png" class="img-fluid " alt="">
                                 </div>
-                                <div><img class="math" src="../images/exponent-step.svg"></div>
+                                <!-- <div><img class="math" src="../images/exponent-step.svg"></div> -->
                             </li>
                             <li><b>E</b>: Many people will get stuck here. To manipulate an unknown exponent, take the natural log (ln) of each side. ln is a button on your calculator. Pay attention to what happens to the exponent n.
                                 <div class="math">
                                     <b>ln 1.5 = n(ln 1.09)</b>
                                 </div>
-                                <div><img class="math" src="../images/exponent-step.svg"></div>
+                                <!-- <div><img class="math" src="../images/exponent-step.svg"></div> -->
                             </li>
                             <li><b>MD</b>: To isolate n, divide both sides by (ln 1.09). Then solve for n.
                                 <div class="bottom-space">
