--- a/tvm1/tvm1-4.html
+++ b/tvm1/tvm1-4.html
@@ -48,7 +48,7 @@
                         </div>
                         <div id="interest">
                             <h4>Interest (i) or Rate of Return</h4>
-                            <p>What is the risk that the customer will not be able to pay the account at a later date? What else could your company do with the money if the customer paid now? If the loan is long enough, will inflation further erode the value of tomorrow's dollar? Interest (i) is the rate of return, compensating for risk and opportunity cost. In formulas, you may see this as indicated by r, i, or k.</p>
+                            <p>What is the risk that the customer will not be able to pay the account at a later date? What else could your company do with the money if the customer paid now? If the loan is long enough, will inflation further erode the value of tomorrow's dollar? Interest (i) is the rate of return, compensating for risk and opportunity cost. In formulas, you may see this indicated by r, i, or k.</p>
                         </div>
                     </div>
                 </div>
