--- a/tvm2/lecture2.html
+++ b/tvm2/lecture2.html
@@ -1018,7 +1018,7 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="content">
-                            <!-- Exercises -->
+
                             <h4>Exercise 2: Identify the Variables</h4>
                             <p>Enter the value of each variable in the boxes below. Leave the unknown variable blank. Then submit your answer.</p>
                             <p class="question">If I deposit $2,000 in an account that earns a semi-annually compounded rate of 8%, how much will my account be worth in 15 years?</p>
@@ -1117,7 +1117,7 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="content">
-                            <!-- Exercises -->
+
                             <h4>Exercise 3: Calculate the Unknown Variable</h4>
                             <p class="question">If I deposit $2,000 in an account that earns a semi-annually compounded rate of 8%, how much will my account be worth in 15 years?</p>
                             <div class="container">
@@ -1207,7 +1207,7 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="content">
-                            <!-- Exercises -->
+
                             <h4>Exercise 4: Identify the Variables</h4>
                             <p>Enter the value of each variable in the boxes below. Leave the box for the unknown variable blank.</p>
                             <p class="question">How much will you have in 1 year if you deposit $500 in a savings account that pays 2% interest compounded quarterly?</p>
@@ -1215,11 +1215,11 @@
                                 <div class="">
                                     <form action="" class="indent">
                                         <label> </label>
-                                        <input id="pvalue-ex4" type="number" placeholder="000"><br>
+                                        <input id="pvalue-ex4" type="number"><br>
                                         <label> </label>
                                         <input id="fvalue-ex4" type="number" placeholder="0"><br>
                                         <label>&nbsp;&nbsp;&nbsp;i </span></label>
-                                        <input id="int-ex4" type="number" placeholder=".00"><br>
+                                        <input id="int-ex4" type="number" placeholder="00"><br>
                                         <label>&nbsp;&nbsp; </label>
                                         <input id="yrs-ex4" type="number" placeholder="0"><br>
                                         <label>&nbsp;m</span> </label>
@@ -1296,7 +1296,7 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="content">
-                            <!-- Exercises -->
+
                             <h4>Exercise 5: Calculate the Unknown Variable</h4>
                             <p class="question">How much will you have in 1 year if you deposit $500 in a savings account that pays 2% interest compounded quarterly?</p>
                             <div class="container">
@@ -1383,7 +1383,7 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="content">
-                            <!-- Exercises -->
+
                             <h4>Exercise 6: Identify the Variables</h4>
                             <p>Enter the value of each variable in the boxes below. Leave the unknown variable blank.</p>
                             <p class="question">What is the Effective Annual Rate (EAR) of an investment that returns 6% interest compounded monthly?</p>
@@ -1391,7 +1391,7 @@
                                 <div class="">
                                     <form action="" class="indent">
                                         <label>i</span>&nbsp;&nbsp;&nbsp; </label>
-                                        <input id="int-ex6" type="number" placeholder=".00"><br>
+                                        <input id="int-ex6" type="number" placeholder="00"><br>
                                         <label>m</span> </label>
                                         <input id="cmpd-ex6" type="number" placeholder="00"><br>
 
@@ -1465,7 +1465,7 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="content">
-                            <!-- Exercises -->
+
                             <h4>Exercise 7: Identify the Variables</h4>
                             <p>Enter the value of each variable in the boxes below. Leave the unknown variable blank.</p>
                             <p class="question">What is the Effective Annual Rate (EAR) of an investment that returns 6% interest compounded monthly? <span class="note">(Enter two digits to the right of the decimal)</span></p>
@@ -1547,7 +1547,7 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="content">
-                            <!-- Exercises -->
+
                             <h4>Exercise 8: Identify the Variables</h4>
                             <p>Enter the value of each variable in the boxes below. Leave the unknown variable blank.</p>
                             <p class="question">Would you rather invest with a) 10% compounded daily (non-leap year) or b) 10.25% compounded semi-annually?</p>
@@ -1556,7 +1556,7 @@
                                     <p>Option A</p>
                                     <form action="" class="indent">
                                         <label>i</span>&nbsp;&nbsp;&nbsp; </label>
-                                        <input id="int-ex8a" type="number" placeholder=".00"><br>
+                                        <input id="int-ex8a" type="number" placeholder="00"><br>
                                         <label>m</span> </label>
                                         <input id="cmpd-ex8a" type="number" placeholder="0"><br>
                                     </form>
@@ -1645,7 +1645,7 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="content">
-                            <!-- Exercises -->
+
                             <h4>Exercise 9: Calculate the Unknown Variable</h4>
                             <p class="question">Would you rather invest with a) 10% compounded daily (non-leap year) or b) 10.25% compounded semi-annually?</p>
                             <p class="note">Note: Please round to 2 places after the decimal point.</span></p>
@@ -1744,7 +1744,7 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="content">
-                            <!-- Exercises -->
+
                             <h4>Exercise 10: Choose an Option</h4>
 
                             <p class="question">Would you rather invest with a) 10% compounded daily (non-leap year) or b) 10.25% compounded semi-annually?</p>
