--- a/tvm3/lecture3.html
+++ b/tvm3/lecture3.html
@@ -1181,7 +1181,7 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="content">
-                            <!-- Exercises -->
+
                             <h4>Exercise 1: Identify the Variables</h4>
                             <p>Enter the value of each variable in the boxes below. Leave the unknown variable blank. Then submit your answer.</span></p>
                             <p class="question">If I save $1200 per year in an account that earns 8% interest (annually compounded) for 20 years, how much should my account be worth?</p>
@@ -1279,7 +1279,7 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="content">
-                            <!-- Exercises -->
+
                             <h4>Exercise 2: Calculate the Unknown Variable</h4>
                             <p class="question">If I save $1200 per year in an account that earns 8% interest (annually compounded) for 20 years, how much should my account be worth?</p>
                             <div class="container">
@@ -1370,7 +1370,7 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="content">
-                            <!-- Exercises -->
+
                             <h4>Exercise 3: Identify the Variables</h4>
                             <p>Enter the value of each variable in the boxes below. Leave the box for the unknown variable blank.</p>
                             <p class="question">If I save $100 per month in an account earning a nominal rate of 8% per year for 20 years, how much should the account be worth?</p>
@@ -1382,7 +1382,7 @@
                                         <label><span class="cf">CF</span> </label>
                                         <input id="cf-ex3" type="number" placeholder="0"><br>
                                         <label>&nbsp;&nbsp;&nbsp;i </span></label>
-                                        <input id="int-ex3" type="number" placeholder=".00"><br>
+                                        <input id="int-ex3" type="number" placeholder="00"><br>
                                         <label>&nbsp;&nbsp; </label>
                                         <input id="yrs-ex3" type="number" placeholder="0"><br>
                                         <label>&nbsp;m</span> </label>
@@ -1461,7 +1461,7 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="content">
-                            <!-- Exercises -->
+
                             <h4>Exercise 4: Calculate the Unknown Variable</h4>
                             <p class="question">If I save $100 per month in an account earning a nominal rate of 8% per year for 20 years, how much should the account be worth?</p>
                             <div class="container">
@@ -1549,7 +1549,7 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="content">
-                            <!-- Exercises -->
+
                             <h4>Exercise 5: Identify the Variables</h4>
                             <p>Enter the value of each variable in the boxes below. Leave the unknown variable blank.</p>
                             <p class="question">What if I deposited the $1200 a year at the beginning of the year for 20 years earning 8% interest? How much would the account be worth? <span class="note">(Hint: as an ordinary annuity, it was worth $54,914.36).</span></p>
@@ -1645,7 +1645,7 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="content">
-                            <!-- Exercises -->
+
                             <h4>Exercise 6: Identify the Variables</h4>
                             <p>Enter the value of each variable in the boxes below. Leave the unknown variable blank.</p>
                             <p class="question">How much more would an account be worth if you paid in $500 per quarter instead of $1000 semi-annually at 6% interest for 10 years?</p>
