--- a/tvm4/lecture4.html
+++ b/tvm4/lecture4.html
@@ -1324,7 +1324,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <!-- Exercises -->
+
                         <h4>Exercise 1: Identify the Problem Type/Equation</h4>
                         <p>Is this question about an annuity, lump sum, or a combination of the two?</p>
                         <p class="question">What is the present value of an ordinary annuity that pays $100 semi-annually for 10 years at 4% interest?</p>
@@ -1415,7 +1415,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <!-- Exercises -->
+
                         <h4>Exercise 2: Identify the Variables</h4>
                         <p>Enter the value of each variable in the boxes below. Leave the box for the unknown variable blank.</p>
                         <p class="question">What is the Present Value of an ordinary annuity that pays $100 semi-annually for 10 years at 4% interest?</p>
@@ -1429,7 +1429,7 @@
                                     <input id="cf-ex2" type="number" placeholder="0"><br>
 
                                     <label>&nbsp;&nbsp;i </span>&nbsp;&nbsp;&nbsp;</label>
-                                    <input id="int-ex2" type="number" placeholder=".00"><br>
+                                    <input id="int-ex2" type="number" placeholder="00"><br>
 
                                     <label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </label>
                                     <input id="yrs-ex2" type="number" placeholder="0"><br>
@@ -1517,7 +1517,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <!-- Exercises -->
+
                         <h4>Exercise 3: Calculate the Unknown Variable</h4>
                         <p class="question">What is the monthly payment for a 30-year mortgage on a house that costs $200,000 if you put down $10,000 and pay 5% interest?</p>
                         <div class="container">
@@ -1607,7 +1607,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <!-- Exercises -->
+
                         <h4>Exercise 4: Identify the Variables</h4>
                         <p>Enter the value of each variable in the boxes below. Leave the unknown variable blank.</p>
                         <p class="question">What is the present value of an annuity due that pays $100 semi-annually for 10 years at 4% interest, if you already know that the PVA of an ordinary annuity with the same variables equals $1635.14? Use the general format of the TVM equation.</p>
@@ -1618,7 +1618,7 @@
                                     <input id="pv-ex4" type="number" placeholder="0.00"><br>
 
                                     <label>i</span>&nbsp;&nbsp; &nbsp;</label>
-                                    <input id="int-ex4" type="number" placeholder=".00"><br>
+                                    <input id="int-ex4" type="number" placeholder="00"><br>
 
                                     <label>&nbsp;&nbsp; </label>
                                     <input id="yrs-ex4" type="number" placeholder="0"><br>
@@ -1704,7 +1704,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <!-- Exercises -->
+
                         <h4>Exercise 5: Calculate the Unknown Variable</h4>
                         <p class="question">What is the present value of an annuity due that pays $100 semi-annually for 10 years at 4% interest, if you already know that the PVA of an ordinary annuity with the same variables equals $1635.14? Use the general format of the TVM equation.</p>
                         <div class="container">
@@ -1798,7 +1798,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <!-- Exercises -->
+
                         <h4>Exercise 6: Identify the Problem Type/Equation</h4>
                         <p>Is this question about an annuity, lump sum, or a combination of the two?</p>
                         <p class="question">What is the Present Value of an annuity that pays $25 quarterly for 20 years at 8% interest?</p>
@@ -1888,7 +1888,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <!-- Exercises -->
+
                         <h4>Exercise 7: Identify the Variables</h4>
                         <p>Enter the value of each variable in the boxes below. Leave the unknown variable blank.</p>
                         <p class="question">What is the Present Value of an annuity due that pays $25 quarterly for 20 years with an 8% rate of return?</p>
@@ -1902,7 +1902,7 @@
                                     <input id="cf-ex7" type="number" placeholder="0.00"><br>
 
                                     <label>&nbsp;&nbsp;i</span>&nbsp;&nbsp;&nbsp; </label>
-                                    <input id="int-ex7" type="number" placeholder=".00"><br>
+                                    <input id="int-ex7" type="number" placeholder="00"><br>
 
                                     <label>&nbsp;&nbsp;&nbsp;&nbsp; </label>
                                     <input id="yrs-ex7" type="number" placeholder="0"><br>
@@ -1987,7 +1987,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <!-- Exercises -->
+
                         <h4>Exercise 8: Calculate the Unknown Variable</h4>
                         <p class="question">What is the Present Value of an annuity due that pays $25 quarterly for 20 years wtih an 8% rate of return?</p>
                         <div class="container">
@@ -2080,7 +2080,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <!-- Exercises -->
+
                         <h4>Exercise 9: Identify the Problem Type/Equation</h4>
                         <p>Is this question about an annuity, lump sum, or a combination of the two?</p>
                         <p class="question">What is the monthly payment for a 30-year mortgage on a house that costs $200,000 if you put down $10,000 and pay 5% interest?</p>
@@ -2169,7 +2169,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <!-- Exercises -->
+
                         <h4>Exercise 10: Identify the Variables</h4>
                         <p>Enter the value of each variable in the boxes below. Leave the unknown variable blank.</p>
                         <p class="question">What is the monthly payment for a 30-year mortgage on a house that costs $200,000 if you put down $10,000 and pay 5% interest?</p>
@@ -2183,7 +2183,7 @@
                                     <input id="cf-ex10" type="number" placeholder="0.00"><br>
 
                                     <label>&nbsp;&nbsp;i</span> &nbsp;</label>
-                                    <input id="int-ex10" type="number" placeholder=".00"><br>
+                                    <input id="int-ex10" type="number" placeholder="00"><br>
 
                                     <label>&nbsp;&nbsp;&nbsp; </label>
                                     <input id="yrs-ex10" type="number" placeholder="0"><br>
@@ -2266,7 +2266,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <!-- Exercises -->
+
                         <h4>Exercise 11: Calculate the unknown variable</h4>
                         <p>Enter the value of each variable in the boxes below. Leave the unknown variable blank.</p>
                         <p class="question">What is the monthly payment for a 30-year mortgage on a house that costs $200,000 if you put down $10,000 and pay 5% interest?</p>
@@ -2362,7 +2362,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <!-- Exercises -->
+
                         <h4>Exercise 12: Identify the Problem Type/Equation</h4>
                         <p>Is this question about an annuity, lump sum, or a combination of the two?</p>
                         <p class="question">What would you pay for a bond that pays $100 at the end of each year and the $1000 face value at the end of 6 years, if you want to earn a 5% rate of return?</p>
@@ -2452,7 +2452,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <!-- Exercises -->
+
                         <h4>Exercise 13: Identify the Variables for PV of the Annuity (PVA)</h4>
                         <p>Enter the value of each variable in the boxes below. Leave the unknown variable blank.</p>
                         <p class="question">What would you pay for a bond that pays $100 at the end of each year and the $1000 face value at the end of 6 years, if you want to earn a 5% rate of return?</p>
@@ -2559,7 +2559,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <!-- Exercises -->
+
                         <h4>Exercise 14: Calculate PVA</h4>
                         <p class="question">What would you pay for a bond that pays $100 at the end of each year and the $1000 face value at the end of 6 years, if you want to earn a 5% rate of return?</p>
                         <div class="container">
@@ -2655,7 +2655,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <!-- Exercises -->
+
                         <h4>Exercise 15: Identify the Variables for the Lump Sum</h4>
                         <p>Enter the value of each variable in the boxes below. Leave the unknown variable blank.</p>
                         <p class="question">What would you pay for a bond that pays $100 at the end of each year and the $1000 face value at the end of 6 years, if you want to earn a 5% rate of return?</p>
@@ -2669,7 +2669,7 @@
                                     <input id="fv-ex15" type="number" placeholder="0.00"><br>
 
                                     <label>&nbsp;&nbsp;i</span>&nbsp;&nbsp;&nbsp; </label>
-                                    <input id="int-ex15" type="number" placeholder=".00"><br>
+                                    <input id="int-ex15" type="number" placeholder="00"><br>
 
                                     <label>&nbsp; &nbsp;&nbsp;</label>
                                     <input id="yrs-ex15" type="number" placeholder="0"><br>
@@ -2755,7 +2755,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <!-- Exercises -->
+
                         <h4>Exercise 16: Calculate PV of the Lump Sum</h4>
                         <p class="question">What would you pay for a bond that pays $100 at the end of each year and the $1000 face value at the end of 6 years, if you want to earn a 5% rate of return?</p>
                         <div class="container">
@@ -2851,7 +2851,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <!-- Exercises -->
+
                         <h4>Exercise 17: Calculate the PV of the Bond</h4>
 
                         <p class="question">What would you pay for a bond that pays $100 at the end of each year and the $1000 face value at the end of 6 years, if you want to earn a 5% rate of return?</p>
