--- a/originals/lecture1 copy 19.html
+++ b/originals/lecture1 copy 19.html
@@ -389,7 +389,7 @@
                                         <input id="PV" type="number" placeholder="0"><br>
 
                                         <label>&nbsp;&nbsp;&nbsp;i </label>
-                                        <input id="i" type="number" placeholder=".00"><br>
+                                        <input id="i" type="number" placeholder="00"><br>
 
                                         <label>&nbsp;&nbsp;n </label>
                                         <input id="n" type="number" placeholder="0"><br>
