--- a/tvm1/tvm1-14.html
+++ b/tvm1/tvm1-14.html
@@ -35,7 +35,7 @@
                     <div class="content">
                         <p>In the problem we just solved, the number in parentheses is called the Present Value Factor. When there are no lump sums or payments, the Present Value Factor is just the reciprocal of the Future Value Factor. </p>
                         <p>Multiply the Future Value (FV) times the Present Value Factor to calculate Present Value (PV)</span class>.</p>
-                        <div><img class="math" src="../images/exponent-step.svg"></div>
+                        <!-- <div><img class="math" src="../images/exponent-step.svg"></div> -->
                         <div class="bottom-space"><img src="./images/pv_factors_table.png" class="img-fluid " alt=""></div>
                         <div class="bottom-space"><img src="./images/tvm_basic_pv_factor_example.png" class="img-fluid " alt=""></div>
                         <div class="bottom-space"><img src="./images/pv_factor_numbers.png" class="img-fluid " alt="">
