--- a/tvm1/tvm1-2.html
+++ b/tvm1/tvm1-2.html
@@ -18,7 +18,7 @@
         <div id="" class="slide">
             <div class="row slide-title">
                 <div class="col-12">
-                    <h2 class="primary-title">TVM: The Basics</h2>
+                    <h2 class="primary-title">Time Value of Money: The Basics</h2>
                     <h3 class="secondary-title">Introduction</h3>
                 </div>
             </div>
@@ -31,8 +31,8 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <h2>The Time Value of Money</h2>
-                    <hr>
+                        <!-- <h2>The Time Value of Money</h2>
+                    <hr> -->
                         <div id="learningObj" class="bottom-space">
                             <h3>Learning Objectives</h3>
                                 <ul>
