--- a/tvm1/tvm1-7.html
+++ b/tvm1/tvm1-7.html
@@ -32,7 +32,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <p>Although calculating the interest for each individual year and adding it to the principal does produce the correct answer, this would be time consuming if you were calculating the future value after 10 years. We can derive a general equation that will allow you to solve for any of the variables: Future Value (FV), Present Value (PV), Interest rate (i), or number of years (n).</p>
+                        <p>Although calculating the interest for each individual year and adding it to the principal does produce the correct answer, this would be time consuming if you were calculating the future value after 10 years. We can derive a general equation that will allow you to solve for any of the variables: Future Value (FV), Present Value (PV), Interest rate (i), or number of years (n). Click Help to review math principals you need to follow along with the derivation of the equation.</p>
                         <p>If we combine our previous equations into one equation it looks like this:</p>
                         <div><img class="math" src="../images/derive1.svg" alt="100(1+.10)(1+.10)=121"></div>
                         <p>We can simplify the equation to this: </p>
@@ -40,8 +40,8 @@
 
                         <p>Let's replace the numbers with variables so we can use the equation with any numbers. </p>
                         <div><img class="math" src="../images/derive2-variables.svg" alt="FV=PV(1+i)^n"></div>
+                        
 
-                        <p>Click Help to review some math principals that you need to know to follow along with the derivation of the equation. If you don't need math help, click Continue.</p>
                     </div>
                 </div>
             </div>
